# starterkit

./: .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  build.sh  cog.toml  default.nix  flake.nix  shell.nix
.github/workflows/: ci.yaml  publish.yaml  release.yaml
example/evil-corp/: default.nix  mystery-bin.cpp  mystery-bin.hpp
nix/: busyboxStatic.nix  containerImages.nix  default.nix  devShell.nix  pushContainerImage.nix  sources.json  testGlibcBinary.nix  tests.nix  uninative.nix
nix/bzl/: BUILD.template.bazel  buildfile.nix  default.nix
nix/containers/: bwrap.nix  default.nix  images.nix  push.nix  runTests.nix  tests.nix
nix/docs/: README.template.md  default.nix  readme.nix
nix/images/: default.nix  images.nix
nix/images/lib/: mkBwrap.nix  pushAllContainerImages.nix  pushContainerImage.nix
nix/images/tests/: default.nix
nix/images/tests/lib/: runTests.nix
nix/lib/: default.nix  mkCallPackage.nix
nix/pkgs/: default.nix  helloWorldGlibc.nix  ubuntuDateutils.nix  uninative.nix
nix/pkgs/bash/: default.nix
nix/pkgs/busybox/: default.nix
nix/pkgs/hello/: default.nix
nix/pkgs/justbuild/: default.nix
nix/pkgs/strace/: default.nix
nix/pkgs/uninative/: default.nix
utils/: readme-image-matrix.sh
