""" Starterkit flavors in form of Bazel execution platforms. """

package(default_visibility = ["//visibility:public"])

# Anything falling in this category should not execute
platform(name = "DEV_NULL_PLATFORM")

platform(
    name = "starterkit-x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
    },
)

# Please be aware,
# that you should select only ONE
# of the following platforms to be registered,
# or add more specific constraints.

platform(
    name = "ash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash:cc930jp2zxq494in652znqrbg3cxnqn3",
    },
)

platform(
    name = "ash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils:8jka5ss98rp3nymqm4iyx57nxicig96i",
    },
)

platform(
    name = "ash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686:nvf3wanvgzml71blvdi3n8s8pckqj43c",
    },
)

platform(
    name = "ash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc:5ilzfpxccd5c5mzgkzxbbvx813zx09bf",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64:mkyk6nssh3jz0ja7l5x0n4xppckci8l7",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64-cc:b22p66fyqn7g0rxc565lwz85gx7mrbnw",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64:0a8kg1rww58vipqw303hwcgjqyvlnajk",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64-cc:5hvvy05f0v3gn3z56lc7l9j1gdd6b837",
    },
)

platform(
    name = "ash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64:10293xhk0v1hr36984z6nsjgapnvj7bj",
    },
)

platform(
    name = "ash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64-cc:ddmjn0n4flcd6n05pqx60zb6jdi8b074",
    },
)

platform(
    name = "ash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686:dfpwsv7krkkhzm226vrvz4q8cx4a3vxf",
    },
)

platform(
    name = "ash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc:3yj91ch14wg4vw7mlhb2aciw60jc86w5",
    },
)

platform(
    name = "ash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64:ajj85z0c30xcq3zyf1j4p22nqz228sd9",
    },
)

platform(
    name = "ash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64-cc:2b901gwmh8qgqk1f34zqhjhd5mpagh1w",
    },
)

platform(
    name = "ash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64:83k8xn5gjjg9c6vhs8fyf41cr4alknrf",
    },
)

platform(
    name = "ash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64-cc:zwfavb0pb6690bv0b5ndbk7v1g37zp8l",
    },
)

platform(
    name = "ash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace:z992scvjim5bn0v4qq6427fdk6qf66rs",
    },
)

platform(
    name = "ash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils:7b16d78ls1zn48jv8jc5k6kd9w3aaagq",
    },
)

platform(
    name = "ash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686:lzr231ma5x4ywswkl33yg89npczj597l",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc:4b1nq4qxvs6p5di6vv6w0k4vgmhgi6k6",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64:ilc5rpw33jmpv3vv8pva19gfsxyb7cv6",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64-cc:6l005in5z0sprjxk9armq363v278i1l0",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64:0hqvfx2b5grgrxq7r1a57mn9zzrc9jc9",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64-cc:7f3rk6x7p2n6b57xxd3bqhml4pi6xkf8",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64:sbni178c2pkfksyvf1pygc1xb5mjrr28",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64-cc:x8q7dgphbqxg55m218z5422dd6qvnnwy",
    },
)

platform(
    name = "ash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686:q3b6xqkafxznzz4cw7frmplpg8j9758f",
    },
)

platform(
    name = "ash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc:wlkwdjr13gvvla2aniqw7dy9dnbif11d",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64:cgwpdk2ww47wwqvm3qvkv5mcl0kdid7a",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64-cc:9cpfp4if35xfz7r3kmj5cdikr0dfyl6b",
    },
)

platform(
    name = "ash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64:lrcdns7r1fyfjkw7hx27z0jbvjqf4r25",
    },
)

platform(
    name = "ash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64-cc:hin7xbb8p9cs59p1q6lrlpgi9qn6ng4b",
    },
)

platform(
    name = "ash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64:zfm3sv279n1n112140jxk56ywgz72211",
    },
)

platform(
    name = "ash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64-cc:0dyqgx7gbfp0bg8vhr79pilxlmaclwkq",
    },
)

platform(
    name = "ash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64:i50fp5b2ja0b8xl2w02042isksrzn7vd",
    },
)

platform(
    name = "ash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64-cc:p3n8wss6g30rrd9dldbs8ll67v4qacrm",
    },
)

platform(
    name = "coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils:8chsw93954s14ab24hmpmhh2lkyv1c6i",
    },
)

platform(
    name = "coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686:98893q692bh15vjhz6yypxvjbivdzapw",
    },
)

platform(
    name = "coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc:8cmrkqr5mkb904ldy4yb9pfkiz2il510",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64:0i73wm5mbi3rqhszpsy7dd97kn7aigzn",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64-cc:awpapc2kf4kc8p7s5gc1s403ldrw6zai",
    },
)

platform(
    name = "coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64:p8z9isfrvn4fjp9i87jxlxqbnl6558j6",
    },
)

platform(
    name = "coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64-cc:0gylv5x71m2w7z707xxr98rc52mnh0v8",
    },
)

platform(
    name = "coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64:v6y0b3dzqqgf5amzxfh6h2hwii9chaha",
    },
)

platform(
    name = "coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64-cc:0z4kpxnyry8gz01nq98j23z2317da5wv",
    },
)

platform(
    name = "i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686:1iv57dip85m6pyxfmgj634dy3djixblb",
    },
)

platform(
    name = "i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc:03k5algia83halicdzlvw1xlzc4gshri",
    },
)

platform(
    name = "i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64:45d6qrkbpgbn42rxwh60cq2x05mw3mhg",
    },
)

platform(
    name = "i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64-cc:001962q93y6hiyrd1xj5n47rbyn3immn",
    },
)

platform(
    name = "i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64:gp3gwrmz707rx8ibdim8bspyd8h5nf72",
    },
)

platform(
    name = "i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64-cc:ps78rxlv6vdzajr0dm5dvg5h0nf0i6ip",
    },
)

platform(
    name = "strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace:l6l3zdwm0q6kya37a4n08w5hzdjp2yzw",
    },
)

platform(
    name = "strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils:n6ig9myca425gw521c14m7nkrlr2h0aw",
    },
)

platform(
    name = "strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686:wr6vziyi9zdwwdv34kp2f4v7k3f0jyj9",
    },
)

platform(
    name = "strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc:4gzjd5klk1f60sq3178dvp6v3m4dxm9r",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64:0q8dqq0svldb907zg0yazv0hcidmvc3q",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64-cc:b1d3w110pyf6wf4hxh9qf6zp6fg2dd0c",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64:501994bkvq4cbi0arih4b9x1hjpg752f",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64-cc:4s4dxzbcqaj884rs6yc5rdipy5acy7gj",
    },
)

platform(
    name = "strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64:cx9map8nfgv1dn7jzqpsaz8nlv3fd4mx",
    },
)

platform(
    name = "strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64-cc:g0mjhjyll78q8b6g386j7fg2b85c6anc",
    },
)

platform(
    name = "strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686:yhqics1lmqgp36j392f3q12g535nas12",
    },
)

platform(
    name = "strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc:s35ahw1srh7fgbcmfscqsfjancp7z6kf",
    },
)

platform(
    name = "strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64:bfprd5xrsc5857z8mwzxdidljm9bja3g",
    },
)

platform(
    name = "strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64-cc:qb6l80zk69lsd0j74qz1cii8k21rlx53",
    },
)

platform(
    name = "strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64:wp8jb46m3bbr2asmh0f8pzpycf91rw1k",
    },
)

platform(
    name = "strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64-cc:i2434cynf3xyj9h0rmfb1q7p3z6sa7d5",
    },
)

platform(
    name = "strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64:l3mxbcasravwf0q0hxk71mshdqkf17p7",
    },
)

platform(
    name = "strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64-cc:w83mz4dmb9xai9gf5xy0bav2w6bzd27b",
    },
)

platform(
    name = "x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64:l51yfga1jf0m4ha612w82g8b74vvp8lw",
    },
)

platform(
    name = "x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64-cc:r51qgjj7hck0lbalfwp2qavjk36iq0ki",
    },
)

